<resources>

    <string name="app_name">Buket.Club</string>

    <string name="text_chose_bouquet">Выберите букет</string>
    <string name="text_chose_address_delivery">Выберите адрес доставки</string>

    <string name="text_flowers_type">Тип цветов</string>
    <string name="text_overall_tone_bouquet">Общий тон букета</string>
    <string name="text_overall_event">Событие</string>

    <string name="text_flowers_chose_type">Выберите тип цветов</string>
    <string name="text_overall_chose_tone_bouquet">Выберите общий тон букета</string>
    <string name="text_overall_chose_event">Выберите событие</string>
    <string name="text_overall_chose_time">Выберите время доставки</string>
    <string name="text_overall_chose_shipping_type">Выберите способ доставки</string>


    <string name="text_little">Маленький</string>
    <string name="text_middle">Средний</string>
    <string name="text_great">Большой</string>

    <string name="text_delivery">Доставка</string>
    <string name="text_time">Время</string>

    <string name="text_address_delivery">Выберите адрес доставки</string>
    <string name="text_address_delivery_1">Адрес доставки</string>
    <string name="text_select_address_delivery">Адрес доставки</string>
    <string name="text_bay">Купить</string>

    <string name="text_begin">Начать</string>

    <string name="text_continue">Продолжить</string>
    <string name="text_send">Отправить</string>

    <string name="text_select_artist_bouquet">Выберите\nисполнителя букета</string>
    <string name="text_my_orders">Мои заказы</string>
    <string name="text_chose_artist_bouquet">Выберите\nисполнителя букета</string>

    <string name="text_sort_by">Отсортировать по:</string>

    <string name="text_by_price">Цене</string>
    <string name="text_by_rating">Рейтингу</string>
    <string name="text_by_distance">Расстоянию</string>

    <string name="text_delivery_time">Время доставки</string>
    <string name="text_delivery_type">Способ доставки</string>

    <string name="text_recipient">Получатель</string>
    <string name="text_contact_telephone_of_recipient">Контактный телефон получателя</string>
    <string name="text_contact_comment_to_order">Коментарий к заказу</string>
    <string name="text_select_payment_method">Выберите\nспособ оплаты</string>
    <string name="text_payment_method">Способ оплаты</string>
    <string name="text_in_cash">Оплата наличными</string>
    <string name="text_courier">Курьеру</string>
    <string name="text_delivery_type_courier">Курьером</string>
    <string name="text_delivery_type_pickup">Самовывоз</string>
    <string name="text_in_credit_card">Оплата банковской картой</string>
    <string name="text_visa_master_card">VISA/MASTER CARD</string>
    <string name="text_uniform_purse">Единый кошелек</string>
    <string name="text_w1">Wallet One</string>

    <string name="text_cardholders_name">Имя владельца карты</string>
    <string name="text_input_address">Введите адрес</string>
    <string name="text_card_number">Номер карты</string>
    <string name="text_validity">Срок действия</string>
    <string name="text_CVV">CVV</string>
    <string name="text_pay">Оплатить</string>

    <string name="text_successful_pay_exc">Спасибо за покупку!</string>
    <string name="text_thank_exc">Спасибо!</string>
    <string name="text_invite_friend_and_exc">Расскажи друзьям о нашем сервисе и получи скидку 500 р. на следующий заказ.</string>


    <string name="text_your_order">Ваш заказ</string>
    <string name="text_cost">Стоимость</string>
    <string name="text_delivery_is_carried_out">Осуществляется доставка</string>
    <string name="text_ready">Готово</string>
    <string name="text_shop_phone">Телефон магазина</string>

    <string name="text_rate_bouquet_exp">Оцените букет!</string>
    <string name="text_leave_a_comment">Оставьте комментарий</string>

    <string name="text_prefix_ruble">" руб."</string>

    <string name="text_time_soon">Ближайшее</string>
    <string name="text_time_soon_standalone">в ближайшее время</string>
    <string name="title_activity_payment_type">PaymentTypeActivity</string>

    <string name="text_finding_shop">Поиск магазина</string>
    <string name="text_in_process">Осуществляется доставка</string>
    <string name="text_in_process_pickup">Ваш букет ждет!</string>
    <string name="text_delivered">Букет получен.\nПожалуйста, оставьте отзыв!</string>
    <string name="text_order_done">Заказ выполнен</string>
    <string name="phone_mask">+7 (###) ###-##-##</string>
    <string name="telephone">Телефон</string>

    <string name="marker_bid_price">Предложенная цена:</string>
    <string name="marker_store">Магазин:</string>
    <string name="delivery_info_error">Пожалуйста, заполните данные о заказе.</string>
    <string name="delivery_info_address_error">При заполнении выберите адрес из числа подсказок.</string>
    <string name="chose_shop_not_shop">Идёт поиск исполнителей…</string>
    <string name="not_find_bouquets">Ничего не найдено</string>

    <string name="remove_order_dialog_text">Отмена заказа. Если Вы перейдете назад, то Ваш заказ будет отменен.\nОтменить заказ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>

    <string name="pickup">Самовывоз</string>
    <string name="delivery">Доставка</string>

    <string name="on_map">На карте</string>

    <string name="meter">м.</string>
    <string name="kilometer">км.</string>

    <string name="sort">Сортировка</string>
    <string name="sort_underline"><u>Сортировка</u></string>
    <string name="see_map"><u>Посмотреть на карте</u></string>
    <string name="see_list"><u>Посмотреть список</u></string>
    <string name="chose_sort_type">Выберите способ сортировки</string>
    <string name="sort_by_price">Сортировка по цене</string>
    <string name="sort_by_distance">Сортировка по расстоянию</string>
    <string name="sort_by_rate">Сортировка по рейтингу</string>
    <string-array name="sort_types">
        <item>@string/sort_by_price</item>
        <item>@string/sort_by_distance</item>
        <item>@string/sort_by_rate</item>
    </string-array>

    <string name="check_internet_connection">Нет соединения с Интернетом</string>
    <string name="gps_error">Не удалось точно определить местоположение</string>
    <string name="code_is_not_write">Код не введен</string>
    <string name="code_is_wrong">Код не верен</string>
    <string name="code_write_title">@string/app_name</string>
    <string name="code_write_second">Вам на телефон отправлен код для подтверждения Вашего номера.</string>
    <string name="text_done">Готово</string>
    <string name="phone_verification_error">Ошибка подтверждения телефона</string>

    <string name="oops_error">Оопс, что-то пошло не так.</string>
    <string name="your_name">Имя</string>
    <string name="enter_code">Введите код</string>
    <string name="splash_title">Buket.club</string>

    <string name="phone_not_entered">Телефон не введен</string>
    <string name="name_not_entered">Имя не введено</string>

    <!-- Default caption TextView, Buttons, etc -->
    <string name="default_buket_name">Состав: Розы (5), герберы (3), тюльпаны (5)</string>
    <string name="default_buket_price">1 990 руб.</string>
    <string name="default_buket_payment_type">Оплата при получении</string>
    <string name="default_buket_delivery_type">Самовывоз</string>
    <string name="default_buket_address">г.Москва, ул. Новый Арбат, дом 5 стр 1</string>

    <string name="default_buket_address_shop">Магазин на карте</string>

    <string name="default_buket_rub">%1$s руб.</string>

    <!-- END -->

    <!-- For page "Thanks for your purchase" -->
    <string name="title_site">MissFlowers.ru</string>
    <string name="phone_site">+7 925 119 02 27</string>

    <string name="assembling_bouquet">Идет сборка букета</string>
    <string name="title_bouquet">Букет из нежных французских роз</string>
    <string name="composition_bouquet">Хризантема  - 2шт; Роза - 8шт; Гортензия - 2шт; Гербера мини - 5шт;</string>
    <string name="number_order">№%1$s</string>

    <string name="price_bouquet">5500</string>
    <string name="price_bouquet_currency">" руб."</string>
    <string name="logo">Логотип</string>
    <!-- END -->

    <string name="confirm_payment">Подтверждение оплаты</string>
    <string name="failed_payment">Платеж не удался</string>
    <string name="confirm_payment_hint">Попробуйте повторить платеж. При наличии технической проблемы, пожалуйста, свяжитесь по телефону: +7 (495) 640-89-42</string>
    <string name="try_pay_again">Попробовать снова</string>
    <string name="comment_hint">Комментарий</string>
    <string name="name_hint">Имя получателя</string>

    <string name="engineer_menu">Инженерное меню</string>
    <string name="engineer_title_token">Ваш токен:</string>
    <string name="engineer_close">Закрыть</string>
    <string name="engineer_push">Отправить пуш</string>

    <string name="text_registration">Регистрация</string>

    <string name="slider1_title">Устроить сюрприз очень просто</string>
    <string name="slider1_subtitle">Воспользуйтесь нашим бесплатным приложением, чтобы доставить радость своим друзьям и близким</string>
    <string name="slider2_title">Выберите цветы и подпишите открытку</string>
    <string name="slider2_subtitle">Передадим с букетами ваши теплые пожелания и искренние поздравления.</string>
    <string name="slider3_title">Поздравить близких без забот</string>
    <string name="slider3_subtitle">Выберите букет, укажите время доставки, сообщите контакты получателя, все остальное мы сделаем сами.</string>
    <string name="slider_agreement">Регистрируясь, вы принимаете условия, указанные в положении об использовании buket.club. Подробнее…</string>
    <string name="slider_no_thanks">НЕТ, СПАСИБО</string>

    <string name="slider_copyright">\u00a9 Copyright Buket.club</string>

    <string name="test_description">Хризантема - 2 шт; Роза - 8 шт;\nГортензия - 2 шт; Гербера мини - 5 шт;\nАнтирринум - 5 шт; Аммарилис - 1шт;\nАстильба - 7 шт; Писташ; Амбрелла.\n</string>
    <string name="text_bouquet_size">Размер букета:</string>
    <string name="details_comp_title">Состав:</string>
    <string name="details_desc_title">Описание:</string>
    <string name="details_copyright">\u00a9 Copyright 2016</string>
    <string name="details_buket_club">Buket.club</string>
    <string name="text_facebook">facebook</string>
    <string name="text_twitter">twiiter</string>
    <string name="text_instagram">instagram</string>
    <string name="text_google_plus">google+</string>

    <string name="order_text">Заказ:</string>
    <string name="delivery_title_text">Адрес самовывоза:</string>
    <string name="cancel_order_text">Отменить заказ</string>
    <string name="delete_label_text">Удалить запись</string>
    <string name="shop_map_text">Магазин на карте</string>
    <string name="more_text">Подробнее о букете</string>
    <string name="buy_text">Купить</string>
    <string name="share_text">Поделиться с друзьями</string>
    <string name="favorites_text">В избранное</string>
    <string name="apply_text">Применить</string>
    <string name="share_then_text">Расскажу позже</string>
    <string name="cancel_filter_text">Сбросить фильтр</string>
    <string name="options_filter_text">Уточните интересующие Вас параметры</string>
    <string name="social_text">Коснитесь, чтобы рассказать своим друзьям об этом букете в соцсетях</string>
</resources>
