<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/a_sslider_coordinator_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/splash_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splash_slide1_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/slide1_image"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/slide1_title"
            android:layout_below="@id/splash_slide1_image"
            android:text="@string/slider1_title"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/slide1_subtitle"
            android:layout_below="@id/slide1_title"
            android:text="@string/slider1_subtitle"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/slide_reg_button"
            android:text="@string/text_registration"
            android:textAllCaps="false"
            android:background="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/slide1_subtitle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/slide1_agreement"
            android:layout_below="@id/slide_reg_button"
            android:text="@string/slider_agreement"
            android:textSize="10sp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dots_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slide_no_thanks"
            android:text="@string/slider_no_thanks"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            />




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/slide_copyright"
            android:text="@string/slider_copyright"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="10sp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:textColor="#d8d8d8"
            />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/layoutDots"
            android:layout_alignParentBottom="true"/>




</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
<include layout="@layout/include_progress"/>
</RelativeLayout>