<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom_edit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/a_r_coordinator_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.creators.buket.club.view.activitys.BucketsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/a_r_blur_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/a_r_relative_action_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/a_r_image_action_bar_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left_right_action_bar"
                android:layout_marginRight="@dimen/margin_left_right_action_bar"
                android:layout_marginTop="@dimen/margin_top_action_bar_a_r_close"
                android:src="@drawable/round_action_bar" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/a_r_action_bar"
                    layout="@layout/include_action_bar" />

                <TextView
                    android:id="@+id/a_r_text_action_bar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/a_r_action_bar"
                    android:layout_centerHorizontal="true"

                    android:text="@string/text_rate_bouquet_exp"
                    android:textColor="@color/text_color_default"
                    android:textSize="@dimen/text_size_normal"
                    android:visibility="visible"
                    android:layout_marginBottom="@dimen/margin_larger"/>

                <RatingBar
                    android:id="@+id/a_r_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/rating_bar_large"
                    android:layout_below="@id/a_r_text_action_bar_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:stepSize="1"/>

                <ImageView
                    android:id="@+id/a_r_image_artist_icon"
                    android:layout_width="@dimen/image_artist_icon_width"
                    android:layout_height="@dimen/image_artist_icon_height"
                    android:src="@drawable/logo_splash"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/a_r_rating_bar"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/a_r_relative_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/a_r_relative_action_bar_container"
            android:layout_marginTop="-37dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_normal"
                android:id="@+id/a_r_comment_container">

                <TextView
                    style="@style/small_text.text_black"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/text_leave_a_comment"/>

                <EditText
                    android:id="@+id/a_r_edit_comment"
                    style="@style/text_view_normal"
                    android:inputType="text|textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
                    android:hint="@string/comment_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="7" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_larger"

                android:text="@string/text_thank_exc"
                android:id="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/a_r_button_send_review"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/a_r_button_send_review"
                style="@style/button_default"
                android:text="@string/text_send"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <include layout="@layout/include_progress"/>

    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
