<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/more_layout"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_bouquet_flower_icon"
            android:src="@drawable/ic_flower"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/more_text"
            android:layout_toRightOf="@id/list_bouquet_flower_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:textColor="@color/gray_text"
            android:textSize="18sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/order_background_gray"
        android:layout_marginTop="@dimen/margin_small"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buy_layout"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_bouquet_buy_icon"
            android:src="@drawable/ic_cart_black"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/buy_text"
            android:layout_toRightOf="@id/list_bouquet_buy_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:textColor="@color/gray_text"
            android:textSize="18sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/order_background_gray"
        android:layout_marginTop="@dimen/margin_small"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/share_layout"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_bouquet_share_icon"
            android:src="@drawable/ic_share_black"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/share_text"
            android:layout_toRightOf="@id/list_bouquet_share_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:textColor="@color/gray_text"
            android:textSize="18sp"/>
    </RelativeLayout>




</LinearLayout>